# sunny

./: .gitignore  CHANGELOG.MD  LICENSE  MANIFEST.in  README.md  configure.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  themes.py  utility.py
.config/: config.template.json  config.template.toml
.config/themes/: minimal.toml  sunny_dynamic.toml
sunny/: __main__.py  cli.py  config_maker.py  configure.py  themes.py  utility.py
sunny/.config/themes/: cyberpunk.toml
