[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunny"
version = "1.0.2"
description = "A minimal CLI tool to see weather on your terminal"
readme = "README.md"
authors = [{ name = "Sagar Sharma", email = "sagar292905@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
keywords = ["minimal", "cli", "weather"]
dependencies = ["requests", "toml", 'rich']
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/bremsstrahlung-57/sunny"

[project.scripts]
sunny = "sunny.__main__:main"
